--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,27 +1,44 @@
 spring.application.name=api-gateway
-spring.cloud.config.uri=http://config-server:8888
-spring.cloud.gateway.routes[0].id=location-service
-spring.cloud.gateway.routes[0].uri=lb://location-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/locations/**
-spring.cloud.gateway.routes[0].filters[0]=RewritePath=/api/locations/(?<segment>.*), /api/locations/${segment}
-spring.cloud.gateway.routes[1].id=store-service
-spring.cloud.gateway.routes[1].uri=lb://store-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/stores/**, /api/store-entries/**
-spring.cloud.gateway.routes[1].filters[0]=RewritePath=/api/(?<segment>.*), /api/${segment}
-spring.cloud.gateway.routes[2].id=distance-calculation-service
-spring.cloud.gateway.routes[2].uri=lb://distance-calculation-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/distances/**
-spring.cloud.gateway.routes[2].filters[0]=RewritePath=/api/distances/(?<segment>.*), /api/distances/${segment}
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.default-filters[0].name=RequestRateLimiter
-spring.cloud.gateway.default-filters[0].args.redis-rate-limiter.replenishRate=10
-spring.cloud.gateway.default-filters[0].args.redis-rate-limiter.burstCapacity=20
-spring.config.import=optional:configserver:http://config-server:8888
-
 server.port=8090
 
-eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+spring.cloud.config.uri=http://localhost:8888
+
+# Disable CSRF for Gateway
+spring.cloud.gateway.filter.csrf.enabled=false
+spring.webflux.base-path=/
+
+# Debug logging
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.reactor.netty=DEBUG
+
+spring.cloud.gateway.routes[0].id=location-service
+spring.cloud.gateway.routes[0].uri=lb://location-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/location-service/**
+#spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/location-service/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[1].id=store-service
+spring.cloud.gateway.routes[1].uri=lb://store-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/store-service/**
+spring.cloud.gateway.routes[1].filters[0]=RewritePath=/store-service/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.routes[2].id=distance-calculation-service
+spring.cloud.gateway.routes[2].uri=lb://distance-calculation-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/distance-calculation-service/**
+spring.cloud.gateway.routes[2].filters[0]=RewritePath=/distance-calculation-service/(?<segment>.*), /$\{segment}
+
+spring.cloud.gateway.discovery.locator.enabled=true
+
+# Comment out rate limiter config which requires Redis
+#spring.cloud.gateway.default-filters[0].name=RequestRateLimiter
+#spring.cloud.gateway.default-filters[0].args.redis-rate-limiter.replenishRate=10
+#spring.cloud.gateway.default-filters[0].args.redis-rate-limiter.burstCapacity=20
+
+spring.config.import=optional:configserver:http://localhost:8888
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
 management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always 
+management.endpoint.health.show-details=always
