api-gateway-update

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -29,10 +29,9 @@ spring.cloud.gateway.routes[2].filters[0]=RewritePath=/distance-calculation-serv
 
 spring.cloud.gateway.discovery.locator.enabled=true
 
-# Comment out rate limiter config which requires Redis
-#spring.cloud.gateway.default-filters[0].name=RequestRateLimiter
-#spring.cloud.gateway.default-filters[0].args.redis-rate-limiter.replenishRate=10
-#spring.cloud.gateway.default-filters[0].args.redis-rate-limiter.burstCapacity=20
+spring.cloud.gateway.default-filters[0].name=RequestRateLimiter
+spring.cloud.gateway.default-filters[0].args.redis-rate-limiter.replenishRate=10
+spring.cloud.gateway.default-filters[0].args.redis-rate-limiter.burstCapacity=20
 
 spring.config.import=optional:configserver:http://localhost:8888
 
