--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,10 +7,16 @@ spring.cloud.config.uri=http://localhost:8888
 spring.cloud.gateway.filter.csrf.enabled=false
 spring.webflux.base-path=/
 
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=USER,ADMIN
+
 # Debug logging
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.reactor.netty=DEBUG
+logging.level.org.springframework.security=TRACE
+logging.level.com.hasandag.courier.tracking.system.apigateway=DEBUG
 
 spring.cloud.gateway.routes[0].id=location-service
 spring.cloud.gateway.routes[0].uri=lb://location-service
@@ -38,5 +44,6 @@ spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
+management.endpoint.gateway.access=unrestricted
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
